[gd_scene load_steps=5 format=3 uid="uid://cmodhfpkjanov"]

[ext_resource type="Script" uid="uid://bpp1f53hny0ku" path="res://script/board.gd" id="1_2cxp4"]
[ext_resource type="Texture2D" uid="uid://w7v8dasn3uti" path="res://assets/TestTable.png" id="8_l0ske"]
[ext_resource type="Texture2D" uid="uid://bh5bho708q3ed" path="res://assets/black_pieces/black_pawn.jpg" id="9_7xoqm"]
[ext_resource type="Script" uid="uid://38o8sxe1ugc0" path="res://script/PauseMenu.gd" id="10_ob7dw"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_2cxp4")

[node name="Board" type="Sprite2D" parent="."]
position = Vector2(562, 100)
texture = ExtResource("8_l0ske")
centered = false

[node name="Black_Pawn" type="Sprite2D" parent="."]
position = Vector2(1043, 281)
texture = ExtResource("9_7xoqm")

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("10_ob7dw")

[node name="PauseButton" type="Button" parent="PauseMenu"]
offset_left = 179.0
offset_top = 46.0
offset_right = 235.0
offset_bottom = 77.0
text = "pause"

[node name="Window" type="Window" parent="PauseMenu"]
process_mode = 2
initial_position = 1
size = Vector2i(200, 200)
visible = false

[node name="Panel" type="VBoxContainer" parent="PauseMenu/Window"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_top = 18.0
offset_right = 41.0
offset_bottom = 119.0
grow_horizontal = 2
alignment = 1

[node name="continue_button" type="Button" parent="PauseMenu/Window/Panel"]
layout_mode = 2
text = "Continue"

[node name="restart_button" type="Button" parent="PauseMenu/Window/Panel"]
layout_mode = 2
text = "restart"

[node name="quit_button" type="Button" parent="PauseMenu/Window/Panel"]
layout_mode = 2
text = "quit"

[connection signal="pressed" from="PauseMenu/PauseButton" to="PauseMenu" method="_on_pause_button_pressed"]
[connection signal="pressed" from="PauseMenu/Window/Panel/continue_button" to="PauseMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/Window/Panel/restart_button" to="PauseMenu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/Window/Panel/quit_button" to="PauseMenu" method="_on_quit_button_pressed"]
